section campus done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,52 @@
             <div class="text-box">
                 <h1>World's Biggest University</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique ratione sunt eum libero nesciunt, provident consectetur! Eum, <br>earum quos harum dolores commodi recusandae suscipit possimus.</p>
-                <a href="">Visit Us To Know More</a>
+                <a href="" class="hero-btn">Visit Us To Know More</a>
+            </div>
+        </section>
+
+        <!-- -----course section----- -->
+        <section class="course">
+            <h1 class="section-course-title">Courses we offer</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur!</p>
+            <div class="row">
+                <div class="course-col">
+                    <h3 class="courses-title">Intermediate</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                </div>
+                <div class="course-col">
+                    <h3 class="courses-title">Degree</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                </div>
+                <div class="course-col">
+                    <h3 class="courses-title">Post Graduation</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                </div>
+            </div>
+        </section>
+        <!-- ------ Section Campus ----- -->
+        <section class="campus">
+            <h1>Our Global Campus</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque esse dolor labore cupiditate laboriosam!</p>
+            <div class="row">
+                <div class="campus-col">
+                    <img src="images/london.png" alt="">
+                    <div class="layer">
+                        <h3>LONDON</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="images/newyork.png" alt="">
+                    <div class="layer">
+                        <h3>NEW YORK</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="images/washington.png" alt="">
+                    <div class="layer">
+                        <h3>WASHINGTON</h3>
+                    </div>
+                </div>
             </div>
         </section>
     </header>
