--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/27cb2832c1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,9 +32,12 @@
             </nav>
             <div class="text-box">
                 <h1>World's Biggest University</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique ratione sunt eum libero nesciunt, provident consectetur! Eum, <br>earum quos harum dolores commodi recusandae suscipit possimus.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique ratione sunt eum libero nesciunt,
+                    provident consectetur! Eum, <br>earum quos harum dolores commodi recusandae suscipit possimus.</p>
                 <a href="" class="hero-btn">Visit Us To Know More</a>
             </div>
+    </header>
+    <main>
         </section>
 
         <!-- -----course section----- -->
@@ -42,22 +47,26 @@
             <div class="row">
                 <div class="course-col">
                     <h3 class="courses-title">Intermediate</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore
+                        maxime architecto incidunt nulla ipsa pariatur culpa.</p>
                 </div>
                 <div class="course-col">
                     <h3 class="courses-title">Degree</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore
+                        maxime architecto incidunt nulla ipsa pariatur culpa.</p>
                 </div>
                 <div class="course-col">
                     <h3 class="courses-title">Post Graduation</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore maxime architecto incidunt nulla ipsa pariatur culpa.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reprehenderit odit soluta labore
+                        maxime architecto incidunt nulla ipsa pariatur culpa.</p>
                 </div>
             </div>
         </section>
         <!-- ------ Section Campus ----- -->
         <section class="campus">
             <h1>Our Global Campus</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque esse dolor labore cupiditate laboriosam!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque esse dolor labore cupiditate
+                laboriosam!</p>
             <div class="row">
                 <div class="campus-col">
                     <img src="images/london.png" alt="">
@@ -79,12 +88,90 @@
                 </div>
             </div>
         </section>
-    </header>
-    <main>
 
+        <!-- ----- Section Facilities ----- -->
+        <section class="facilities">
+            <h1>Our Facilities</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolorum!</p>
+            <div class="row">
+                <div class="facilities-col">
+                    <img src="images/library.png" alt="">
+                    <h3>World Class Library</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="facilities-col">
+                    <img src="images/basketball.png" alt="">
+                    <h3>Largest Play Ground</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="facilities-col">
+                    <img src="images/cafeteria.png" alt="">
+                    <h3>Teasty and Healthy Food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- ----- Section Testimonials ----- -->
+        <section class="testimonials">
+            <h1>What Our Student Says</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nobis numquam, velit vero asperiores quam?
+            </p>
+            <div class="row">
+                <div class="testimonial-col">
+                    <img src="images/user1.jpg" alt="">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sint tempora maxime,
+                            consectetur fugiat officiis asperiores dignissimos. Possimus, sapiente perferendis?</p>
+                        <h3>Md. Riyad Islam</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+                <div class="testimonial-col">
+                    <img src="images/user2.jpg" alt="">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sint tempora maxime,
+                            consectetur fugiat officiis asperiores dignissimos. Possimus, sapiente perferendis?</p>
+                        <h3>Md. Shawn Hossen</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ----- Call to Action ----- -->
+        <section class="cta">
+            <h1>Enroll for our various online courses
+                <br>
+                Anywhere form the world
+            </h1>
+            <a href="" class="hero-btn">Conact Us</a>
+        </section>
     </main>
     <footer>
 
+        <!-- -----Footer Section ----- -->
+
+        <section class="footer">
+            <h4>About Us</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis, blanditiis unde
+            <br>
+            officiis dolorum ad enim libero ex aperiam deserunt esse excepturi! Maxime, ducimus nihil?</p>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <p>Made with <i class="fa-solid fa-moon"></i> by Ислам М.Р.</p>
+        </section>
     </footer>
 </body>
 
